<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hr.fer.ruazosa.evidencijaopremeulaboratoriju.AddItemActivity">

    <TextView
        android:id="@+id/addItemLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_item_label"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/kitInputText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/kit_input"
        android:inputType="textPersonName"
        android:textSize="14sp"
        android:layout_below="@+id/tableLayout2"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/descriptionInputText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/description_input"
        android:inputType="textPersonName"
        android:textSize="14sp"
        android:layout_below="@+id/kitInputText"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/locationInputText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/location_input"
        android:inputType="textPersonName"
        android:textSize="14sp"
        android:layout_below="@+id/inventoryNumberEditText"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/okButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ok_button"
        android:layout_below="@+id/numberEditText"
        android:layout_alignParentStart="true" />



    <EditText
        android:id="@+id/numberEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/locationInputText"
        android:ems="10"
        android:hint="@string/number"
        android:inputType="number"
        android:textSize="14sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tableLayout2"
        android:layout_below="@+id/addItemLabel"
        android:layout_alignParentStart="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/idInputText"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/id_input"
                android:inputType="textPersonName"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/deviceLetterInputText"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/device_letter"
                android:inputType="textPersonName"
                android:textSize="14sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <EditText
                android:id="@+id/typeInputText"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/type_input"
                android:inputType="textPersonName"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/subtypeEditText"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/subtype_input_text"
                android:inputType="textPersonName"
                android:textSize="14sp" />
        </TableRow>

    </TableLayout>

    <EditText
        android:id="@+id/inventoryNumberEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/inventory_number"
        android:inputType="number"
        android:textSize="14sp"
        tools:ignore="TextFields"
        android:layout_below="@+id/descriptionInputText"
        android:layout_alignParentStart="true" />

</android.widget.RelativeLayout>
