<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hr.fer.ruazosa.evidencijaopremeulaboratoriju.ReserveActivity">

    <EditText
        android:id="@+id/studentEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/student_s_first_and_last_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/profesorEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/studentEditText"
        android:ems="10"
        android:hint="@string/professor_s_first_and_last_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/durationPeriodEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/profesorEditText"
        android:ems="10"
        android:hint="@string/duration_period"
        android:inputType="number" />

    <Button
        android:id="@+id/doneButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="131dp"
        android:text="@string/done" />

</android.widget.RelativeLayout>
